[tool.poetry]
name = "etl_spark_app"
version = "0.1.0"
description = "ETL PySpark App"
authors = ["Vishwajeet Kumar"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
